kubernetes-perfect-guide/chapter6/sample-none-selector.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-none-selector
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sample-none-selector
subsets:
  - addresses:
    - ip: 192.168.1.1
    - ip: 192.168.1.2
    ports:
      - protocol: TCP
        port: 80
